syntax = "proto3";
package delicate.actuator;

import "google/protobuf/any.proto";

message Task{
    uint64 task_id = 1;
    string task_name = 2;
    string command = 3;
}

message UnifiedResponseMessages{
    int32 code = 1;
    string msg = 2;
    repeated google.protobuf.Any data = 3;  
}

service Actuator {
    rpc AddTask(Task) returns (UnifiedResponseMessages) {}
}